log
Sat, Mar 29, 2025  9:10:00 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Sat, Mar 29, 2025 10:01:53 PM: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
6a7551e
Sat, Mar 29, 2025 10:04:30 PM: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
b37dd37
Sat, Mar 29, 2025 10:16:14 PM: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:65:30: error: 'return' with a value, in function returning void [-Werror]
     if (list == NULL) return NULL;
                              ^~~~
list.c:64:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:67:36: error: 'return' with a value, in function returning void [-Werror]
     if (nuevo_nodo == NULL) return NULL;
                                    ^~~~
list.c:64:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
54378d7
